...
        android:visibility="gone"
        app:drawableStartCompat="@drawable/ic_edit"
        app:drawableTint="@color/icon_tint"
        app:layout_constraintTop_toBottomOf="@+id/share" />

    <TextView
        android:id="@+id/delete"
        style="@style/PasswordMenuItem"
        android:drawablePadding="@dimen/dp_16"
        android:text="@string/more_delete"
        android:visibility="gone"
        app:drawableStartCompat="@drawable/ic_trash"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit" />

</androidx.constraintlayout.widget.ConstraintLayout>
...
