<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="home_empty_list">Empty list</string>
    <string name="home_decryption_failure">Error during secret decryption</string>
    <string name="home_fetch_failure">Error during downloading the secret</string>
    <string name="home_create">Create</string>
    <string name="home_resource_deleted_format">%s password was deleted.</string>
    <string name="home_resource_edited_format">%s password was successfully edited.</string>

    <string name="switch_account_see_details">See details</string>
    <string name="switch_account_sign_out">Sign out</string>
    <string name="switch_account_manage_accounts">Manage accounts</string>
    <string name="switch_account_title">Switch account</string>
    <string name="filters_menu_title">Filter view by</string>
    <string name="filters_menu_all_items">All items</string>
    <string name="filters_menu_favourites">Favourites</string>
    <string name="filters_menu_recently_modified">Recently modified</string>
    <string name="filters_menu_shared_with_me">Shared with me</string>
    <string name="filters_menu_owned_by_me">Owned by me</string>
</resources>
