...
                    style="@style/Heading1Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginHorizontal="@dimen/dp_72"
                    android:gravity="center_horizontal"
                    android:text="@string/no_passwords"
                    android:textColor="@color/text_primary" />

                <ImageView
                    android:id="@+id/emptyListImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
